# manga-downloader

./: Cargo.toml  README.md  improvements-list.md  improvements.md
src/: cache.rs  chapter_to_download.rs  downloader.rs  error.rs  lib.rs  main  main.rs  manga_to_download.rs  pdf.rs
tests/: chapter_selection_test.rs  downloader_test.rs
